--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
     "mime": "^1.3.6",
+    "mysql": "^2.14.1",
     "mz": "^2.6.0",
     "nunjucks": "^3.0.1"
   }
